# k_studio_test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  req.txt
alembic/: env.py
scripts/: migrate.sh
src/: auth.py  config.py  crud.py  database.py  main.py  router.py  shemas.py  utils.py
src/orm_models/: base_class.py  tables.py
